--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pdfmerger",
   "version": "1.0.0",
   "main": "server.js",
-   "type": "module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
+    "pdf-lib": "^1.17.1",
     "pdf-merger-js": "^5.1.2"
   }
 }
